# basement-renovator

./: .BasementRenovator.py.swp  .cspell.json  .gitignore  .prettierrc.js  .pylintrc  BR.bat  BasementRenovator.py  BasementRenovator.tsx  BasementRenovatorAfterbirth.py  INSTALL.md  LICENSE.md  NicheFeatures.md  README.md  README_zh.md  black.sh  cspell.json  installation.md  items.xml  lint.sh  mac_build.py  mac_setup.py  nuke.sh  package-lock.json  package.json  publish.sh  pyproject.toml  release.sh  requirements.txt  test.py  win_build.py  win_setup.py  winversion.txt
resources/: CollectiblesAfterbirth.xml  CollectiblesAfterbirthPlus.xml  CollectiblesAntibirth.xml  CollectiblesRebirth.xml  CollectiblesRepentance.xml  Entities.xml  EntitiesAfterbirth.xml  EntitiesAfterbirthPlus.xml  EntitiesAntibirth.xml  EntitiesByFloor.xml  EntitiesRebirth.xml  EntitiesRepentance.xml  EntitiesRepentancePlus.xml  RoomTypesAfterbirth.xml  RoomTypesAfterbirthPlus.xml  RoomTypesAntibirth.xml  RoomTypesRebirth.xml  RoomTypesRepentance.xml  RoomTypesRepentancePlus.xml  SecretRoomTypesOld.xml  StagesAfterbirth.xml  StagesAfterbirthPlus.xml  StagesAntibirth.xml  StagesGreed.xml  StagesRebirth.xml  StagesRepentance.xml  Versions.xml  icongenerator.py  stagepath.txt  teststart.stb
src/: anm2.py  bulk-entity-replacer.py  constants.py  core.py  entitiesgenerator.py  icongenerator.py  lookup.py  roombulkconverter.py  roombulkconverterconfig.py  roomconvert.py  roommerger.py  roommergerconfig.py  roomstatistics.py  roomstatisticsconfig.py  settings.py  stb-bulk-converter-config.py  test.py  (+3 more)
(+92 files in other folders)
